logout user added to html files and serverside handling

--- a/templates/login.html
+++ b/templates/login.html
@@ -48,17 +48,17 @@
                     <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo">register</h1>
                     <div class="w3-half section-width">
                         <div class="w3-margin">
-                            <label for="Email" first>Name</label>
+                            <label for="Email" first><small>*</small>   Name</label>
                             <input type="text" class="w3-input sizing" id="name" aria-describedby="emailHelp" name="fname" required>
 
                         </div>
                         <div class="w3-margin">
-                            <label for="Email">Last name</label>
+                            <label for="Email"><small>*</small>  Last name</label>
                             <input type="text" class="w3-input sizing" id="name" aria-describedby="emailHelp" name="lname">
 
                         </div>
                         <div class="w3-margin">
-                            <label for="Email">Email address</label>
+                            <label for="Email"><small>*</small>  Email address</label>
                             <input type="email" class="w3-input sizing" id="Email" aria-describedby="emailHelp" name="email" required>
                             <small id="emailHelp" class="small-tag">*We'll never share your email with anyone else.</small>
                         </div>
