--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -28,9 +28,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('user_panel')}}">Diary</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                        </li>
                         <li class="">
                             <button id="myBtn" class="diary-btn btn btn-outline-dark " disabled>Write your diary</button>
                         </li>
+
 
                     </ul>
                 </div>
