--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('user_panel')}}">Diary</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                        </li>
                     </ul>
                 </div>
             </div>
