menu handling login diary with logged user and without

--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@
 
             <div class="register-form w3-display-middle w3-animate-opacity " id="form-modal">
                 <p class="w3-display-topleft ">
-                    <a href="/" class="back-login">
+                    <a href="{{url_for('login')}}" class="back-login">
                         <-back to login</a>
                 </p>
                 <form class="" action="{{url_for('reg')}}" method="POST">
