--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -34,7 +34,14 @@
             </div>
         </nav>
     </div>
-    <h1 class="text-light">user control panel</h1>
+    <div class="container-fluid text-center">
+        <form action="{{ url_for('user_panel')}}" method="POST">
+            <label> choose date 
+            <input class="btn btn-outline-light" type="date" name="querydate" id="">
+            </label>
+            <input class="btn btn-outline-light" type="button" value="Search">
+        </form>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
