--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -35,11 +35,11 @@
         </nav>
     </div>
     <div class="container-fluid text-center">
-        <form action="{{ url_for('user_panel')}}" method="POST">
+        <form action="/user_panel" method="post">
             <label> choose date 
-            <input class="btn btn-outline-light" type="date" name="querydate" id="">
+                <input type="date" name="datequery">
             </label>
-            <input class="btn btn-outline-light" type="button" value="Search">
+            <input type="submit" value="submit">
         </form>
     </div>
 
