--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -31,16 +31,17 @@
                         </li>
                         {% endif %} {% if not is_active %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                            <a class="nav-link" href="{{url_for('login')}}">Login/Register</a>
                         </li>
                         {% endif %} {% if is_active%}
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
                         </li>
-                        {% endif %}
+                        {% endif %} {% if is_active %}
                         <li class="">
                             <button id="myBtn" class="diary-btn btn btn-outline-dark " disabled>Write your diary</button>
                         </li>
+                        {% endif %}
 
 
                     </ul>
@@ -51,7 +52,7 @@
     <!-- end try -->
     <div class="container-fluid justify-content-center ">
         {% if not is_active %}
-        <p> for better experience login or register</p>
+        <p class="text-white"> for better experience login or register</p>
         {% endif %}
     </div>
     <div class="container-fluid row justify-content-center container-fluid-sm mr-0 ml-0">
