--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -36,10 +36,10 @@
     </div>
     <div class="container-fluid text-center">
         <form action="/user_panel" method="post">
-            <label> choose date 
-                <input type="date" name="datequery">
+            <label class="text-light "> choose date 
+                <input class="btn btn-outline-light" type="date" name="datequery">
             </label>
-            <input type="submit" value="submit">
+            <input class="btn btn-outline-light" type="submit" value="submit">
         </form>
     </div>
 
