--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -42,7 +42,11 @@
             <input class="btn btn-outline-light" type="submit" value="submit">
         </form>
     </div>
-
+    {% if is_found %} {% for data in entry%}
+    <div>
+        {{ entry }}
+    </div>
+    {% endfor%} {% endif %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
