--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/diary.css">
     <title>Document</title>
 </head>
 
@@ -39,14 +40,25 @@
             <label class="text-light "> choose date 
                 <input class="btn btn-outline-light" type="date" name="datequery">
             </label>
-            <input class="btn btn-outline-light" type="submit" value="submit">
+            <input class="btn btn-outline-light" type="submit" value="search">
         </form>
     </div>
-    {% if is_found %} {% for data in entry%}
-    <div>
-        {{ entry }}
+    <div class="container-fluid">
+        <div class=" align-items-center">
+            {% if is_found %} {% for data in entry%}
+            <div class="container d-flex justify-content-center">
+                <img src='{{ data.card1 }}' alt="">
+                <img src='{{ data.card2 }}' alt="">
+                <img src='{{ data.card3 }}' alt="">
+                <img src='{{ data.card4 }}' alt="">
+            </div>
+            <div class="container">
+                <p>{{data.date}}</p>
+                <p class="text-center">{{ data.entry }}</p>
+            </div>
+            {% endfor%} {% endif %}
+        </div>
     </div>
-    {% endfor%} {% endif %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
