diary completed still need design and backgroung changed neet to buy tarot cards for site

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,13 @@
+body {
+    background-image: url(/static/backgroundImage/tarot-991041_1920.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.visability {
+    opacity: 0.5;
+}
+
 .card-bg {
     background-color: rgb(243, 195, 132);
     background-image: linear-gradient(white, rgb(243, 188, 116), white);
