--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,6 +1,8 @@
 body {
+    background-image: url(/static/backgroundImage/tree-3095703_1920.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     margin: 0;
-    background-color: rgb(2, 8, 37);
 }
 
 img {
