--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -13,7 +13,7 @@
 
 <body style="background-color: rgb(2, 8, 37);padding-bottom: 20px;box-sizing: border-box;">
     <div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: rgb(2, 8, 37)">
+        <nav class="visability navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: rgb(2, 8, 37)">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="/static/icons/noun-flash-cards-4767.png" alt="logo" style="width:40px;height:40px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
