--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(/static/backgroundImage/tree-3095703_1920.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: auto;
+    background-repeat: space;
     margin: 0;
     background-color: rgb(2, 8, 37);
 }
