--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/diary.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/static/favicon/favicon-16x16.png" type="image/x-icon">
+    <title>Diary</title>
 </head>
 
 <body style="background-color: rgb(2, 8, 37);padding-bottom: 20px;box-sizing: border-box;">
