--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="static/css/login.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/static/favicon/favicon-16x16.png" type="image/x-icon">
+    <title>Login/Register</title>
 </head>
 
 <body>
