completed the diary panel design

--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
-            <img id="card-num-1" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-1" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body justify-content-center">
                 <h5 class="card-title">Card title</h5>
                 <p id="wow" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
-            <img id="card-num-2" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-2" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
-            <img id="card-num-3" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-3" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -118,7 +118,7 @@
         </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
-            <img id="card-num-4" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
+            <img id="card-num-4" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
