--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/styles.css">
-    <link rel="stylesheet" href="/static/css/diary.css">
+    <link rel="stylesheet" href="/static/css/user_panel.css">
     <link rel="shortcut icon" href="/static/favicon/favicon-16x16.png" type="image/x-icon">
     <title>Diary</title>
 </head>
@@ -16,7 +16,9 @@
     <div>
         <nav class="visability navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: rgb(2, 8, 37)">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/static/icons/noun-flash-cards-4767.png" alt="logo" style="width:40px;height:40px;"></a>
+                <a class="navbar-brand" href="#">
+                    <img src="/static/icons/noun-flash-cards-4767.png" alt="logo" class="logo">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -37,7 +39,7 @@
         </nav>
     </div>
     <div class="container-fluid text-center">
-        <form action="/user_panel" method="post">
+        <form action="/user_panel" method="post" class="mt-3 mb-2">
             <label class="text-light "> choose date 
                 <input class="btn btn-outline-light" type="date" name="datequery">
             </label>
@@ -45,20 +47,22 @@
         </form>
     </div>
     <div class="container-fluid">
-        <div class=" align-items-center">
-            {% if is_found %} {% for data in entry%}
-            <div class="container d-flex justify-content-center">
+        {% if is_found %} {% for data in entry%}
+        <div class="container-fluid d-flex row justify-content-center mb-3">
+            <div class="justify-content-between ml-3">
                 <img src='{{ data.card1 }}' alt="">
-                <img src='{{ data.card2 }}' alt="">
-                <img src='{{ data.card3 }}' alt="">
-                <img src='{{ data.card4 }}' alt="">
+                <img class="img-margin" src='{{ data.card2 }}' alt="">
+                <img class="img-margin" src='{{ data.card3 }}' alt="">
+                <img class="img-margin" src='{{ data.card4 }}' alt="">
             </div>
-            <div class="container">
-                <p>{{data.date}}</p>
+            <div class="ml-3">
+                <p class="">{{data.date}}</p>
                 <p class="text-center">{{ data.entry }}</p>
             </div>
-            {% endfor%} {% endif %}
         </div>
+        {% endfor%} {% endif %}
+
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
