--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(/static/backgroundImage/tarot-991041_1920.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat
 }
 
 .visability {
