--- a/static/css/user_panel.css
+++ b/static/css/user_panel.css
@@ -41,4 +41,11 @@ p {
     form {
         margin: auto;
     }
+    .logo {
+        display: none;
+        min-width: 20px;
+        min-height: 20px;
+        max-width: 20px;
+        max-height: 20px;
+    }
 }
