--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -87,12 +87,13 @@
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-1" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body justify-content-center">
-                <h5 class="card-title">Card title</h5>
-                <p id="wow" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <div class="d-flex justify-content-center">
                     <button id="reveal-1" onclick="card_reveal_1()" class="btn btn-outline-dark mr-3">Reveal</button>
                     <button id="replace_1" onclick="replaceCard_1()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
                 </div>
+                <h5 class="card-title mt-3" id="title1"></h5>
+                <p id="wow" class="card-text" id="short-1"></p>
+
             </div>
 
         </div>
@@ -100,30 +101,39 @@
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-2" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button id="reveal-2" onclick="card_reveal_2()" class="btn btn-outline-dark ">Reveal</button>
-                <button id="replace_2" onclick="replaceCard_2()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
+                <div class="d-flex justify-content-center">
+                    <button id="reveal-2" onclick="card_reveal_2()" class="btn btn-outline-dark mr-3">Reveal</button>
+                    <button id="replace_2" onclick="replaceCard_2()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
+                </div>
+                <h5 class="card-title mt-3" id="title2"></h5>
+                <p class="card-text" id="short-2"></p>
+
             </div>
         </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-3" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button id="reveal-3" onclick="card_reveal_3()" class="btn btn-outline-dark ">Reveal</button>
-                <button id="replace_3" onclick="replaceCard_3()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
+                <div class="d-flex justify-content-center">
+                    <button id="reveal-3" onclick="card_reveal_3()" class="btn btn-outline-dark mr-3">Reveal</button>
+                    <button id="replace_3" onclick="replaceCard_3()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
+                </div>
+                <h5 class="card-title mt-3" id="title3"></h5>
+                <p class="card-text" id="short-3"></p>
+
             </div>
         </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-4" src="/static/TarotCards/tarot-back/tarot-2208600_640.jpg" class="mt-3 card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button id="reveal-4" onclick="card_reveal_4()" class="btn btn-outline-dark ">Reveal</button>
-                <button id="replace_4" onclick="replaceCard_4()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
+                <div class="d-flex justify-content-center">
+                    <button id="reveal-4" onclick="card_reveal_4()" class="btn btn-outline-dark mr-3">Reveal</button>
+                    <button id="replace_4" onclick="replaceCard_4()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
+                </div>
+                <h5 class="card-title mt-3" id="title4"></h5>
+                <p class="card-text" id="short-4"></p>
+
             </div>
         </div>
     </div>
@@ -180,8 +190,14 @@
             //  -------------------------------------- fade in after rendring with fade in 
             document.getElementById("card-num-1").className = "";
             setTimeout(() => {
+                    document.getElementById('title1').innerHTML = `{{ cards[0]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[0]["CARD_SHORT_MEANING"]}} </p>
+                    <button class="btn" onclick="readMore1()"><small>read more...</small></button>
+                    <p class="card-description" id="read-more-1"></p>`;
                     document.getElementById("card-num-1").setAttribute("src", `/{{ cards[0]["CARD_PATH"] }}`);
-                    document.getElementById('card-num-1').className = "card-img-top fade-in-onload"
+
+                    document.getElementById('card-num-1').className = "mt-3 card-img-top fade-in-onload";
+
                 }, 5)
                 // --------------------------------------
 
@@ -207,8 +223,12 @@
             //  -------------------------------------- fade in after rendring with fade in 
             document.getElementById("card-num-2").className = "";
             setTimeout(() => {
+                    document.getElementById('title2').innerHTML = `{{ cards[1]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[1]["CARD_SHORT_MEANING"]}} </p>
+                    <button class="btn" onclick="readMore2()"><small>read more...</small></button>
+                    <p class="card-description" id="read-more-2"></p>`;
                     document.getElementById("card-num-2").setAttribute("src", `/{{ cards[1]["CARD_PATH"] }}`);
-                    document.getElementById('card-num-2').className = "card-img-top fade-in-onload"
+                    document.getElementById('card-num-2').className = "mt-3 card-img-top fade-in-onload"
                 }, 5)
                 // --------------------------------------
 
@@ -235,8 +255,12 @@
             //  -------------------------------------- fade in after rendring with fade in 
             document.getElementById("card-num-3").className = "";
             setTimeout(() => {
+                    document.getElementById('title3').innerHTML = `{{ cards[2]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[2]["CARD_SHORT_MEANING"]}} </p>
+                    <button class="btn" onclick="readMore3()"><small>read more...</small></button>
+                    <p class="card-description" id="read-more-3"></p>`;
                     document.getElementById("card-num-3").setAttribute("src", `/{{ cards[2]["CARD_PATH"] }}`);
-                    document.getElementById('card-num-3').className = "card-img-top fade-in-onload"
+                    document.getElementById('card-num-3').className = "mt-3 card-img-top fade-in-onload"
                 }, 5)
                 // --------------------------------------
 
@@ -264,8 +288,12 @@
             //  -------------------------------------- fade in after rendring with fade in 
             document.getElementById("card-num-4").className = "";
             setTimeout(() => {
+                    document.getElementById('title4').innerHTML = `{{ cards[3]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[3]["CARD_SHORT_MEANING"]}} </p>
+                    <button class="btn" onclick="readMore4()"><small>read more...</small></button>
+                    <p class="card-description" id="read-more-4"></p>`;
                     document.getElementById("card-num-4").setAttribute("src", `/{{ cards[3]["CARD_PATH"] }}`);
-                    document.getElementById('card-num-4').className = "card-img-top fade-in-onload"
+                    document.getElementById('card-num-4').className = "mt-3 card-img-top fade-in-onload"
                 }, 5)
                 // --------------------------------------
 
@@ -286,7 +314,8 @@
         function replaceCard_1() {
             document.getElementById('card-num-1').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
             document.getElementById('modal-pic-1').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
-
+            document.getElementById('title1').innerHTML = `{{ cards[4]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[4]["CARD_SHORT_MEANING"]}} <br> <a href=""><small>read more...</small></a></p>`;
             let btnArr = document.getElementsByClassName("rep");
 
             for (let i = 0; i < btnArr.length; i++) {
@@ -296,6 +325,8 @@
         }
 
         function replaceCard_2() {
+            document.getElementById('title2').innerHTML = `{{ cards[4]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[4]["CARD_SHORT_MEANING"]}} <br> <a href=""><small>read more...</small></a></p>`;
             document.getElementById('card-num-2').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
             let btnArr = document.getElementsByClassName("rep");
 
@@ -305,6 +336,8 @@
         }
 
         function replaceCard_3() {
+            document.getElementById('title3').innerHTML = `{{ cards[4]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[4]["CARD_SHORT_MEANING"]}}</p>`;
             document.getElementById('card-num-3').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
             let btnArr = document.getElementsByClassName("rep");
 
@@ -314,13 +347,31 @@
         }
 
         function replaceCard_4() {
-
+            document.getElementById('title4').innerHTML = `{{ cards[4]["CARD_NAME"] }}
+                    <p class="paragraph"> {{ cards[4]["CARD_SHORT_MEANING"]}}</p>`;
             document.getElementById('card-num-4').setAttribute("src", `/{{ cards[4]["CARD_PATH"] }}`);
             let btnArr = document.getElementsByClassName("rep");
 
             for (let i = 0; i < btnArr.length; i++) {
                 btnArr[i].setAttribute("disabled", "true")
             }
+        }
+
+        // ------------------------- READ MORE CARD DESCRIPTION HANDLING -------------------
+        function readMore1() {
+            document.getElementById('read-more-1').innerHTML = `{{ cards[0]["CARD_DESCRIPTION"] }}`;
+        }
+
+        function readMore2() {
+            document.getElementById('read-more-2').innerHTML = `{{ cards[1]["CARD_DESCRIPTION"] }}`;
+        }
+
+        function readMore3() {
+            document.getElementById('read-more-3').innerHTML = `{{ cards[2]["CARD_DESCRIPTION"] }}`;
+        }
+
+        function readMore4() {
+            document.getElementById('read-more-4').innerHTML = `{{ cards[3]["CARD_DESCRIPTION"] }}`;
         }
     </script>
 
