--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -57,7 +57,7 @@
             </div>
             <div class="ml-3">
                 <p class="">{{data.date}}</p>
-                <p class="text-center">{{ data.entry }}</p>
+                <p class="text-break">{{ data.entry }}</p>
             </div>
         </div>
         {% endfor%} {% endif %}
