--- a/static/css/user_panel.css
+++ b/static/css/user_panel.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(2, 8, 37);
-    font-family: cursive;
+    font-family: cursive, Arial, Helvetica, sans-serif;
     font-weight: 200;
 }
 
